@@ -115,6 +115,10 @@ case "${targ}" in
     targ_selvecs=bfd_elf32_bigarc_vec
     ;;
 
+  armeb-*-netbsdelf*)
+    targ_defvec=bfd_elf32_bigarm_vec
+    targ_selvecs="bfd_elf32_littlearm_vec armnetbsd_vec"
+    ;;
   arm-*-netbsdelf*)
     targ_defvec=bfd_elf32_littlearm_vec
     targ_selvecs="bfd_elf32_bigarm_vec armnetbsd_vec"
